--- a/css/jquery.datetimepicker.css
+++ b/css/jquery.datetimepicker.css
@@ -16,14 +16,12 @@ div#datetimepicker.ui-custom-datetimepicker  .timepicker{
 div#datetimepicker.ui-custom-datetimepicker  .ui-custom-datetimepicker-header{
 	text-align: center;
 	line-height: 1.8em;
+	margin-top: 1px;
+	*margin-top: 4px;
 }
 
 div#datetimepicker.ui-custom-datetimepicker  #hour , div#datetimepicker.ui-custom-datetimepicker  #min{
 	width: 18px;
-}
-
-div#datetimepicker.ui-custom-datetimepicker  .sliders-panel{
-	height: 148px;
 }
 
 div#datetimepicker.ui-custom-datetimepicker  .sliders-panel>div{
@@ -31,27 +29,38 @@ div#datetimepicker.ui-custom-datetimepicker  .sliders-panel>div{
 }
 
 div#datetimepicker.ui-custom-datetimepicker  #hour-slider,div#datetimepicker.ui-custom-datetimepicker  #min-slider{
-	height:125px; margin:1em;
+	height:11em;
+	margin:1em;
 }
-
 
 
 .notitle .ui-dialog-titlebar {
 	display:none;
 }
+
 .ui-custom-datetimepicker-hour-pane{
 	display: block;
 	width:80px;
 }
-.ui-custom-datetimepicker-refresh-icon{
-	display:inline;
-	padding:0.5em;
-	margin: 0.5em 0.4em 0 0;
-	position: absolute;
-	width: 1.4em;
-	cursor: pointer;
-}
+
 .ui-custom-datetimepicker-datejs-input{
-	padding:0.5em;
-	margin: 0.5em 0 0.5em 0;
+	position: relative;
+	display: inline-block;
+	margin: 0.5em 0.4em 0.5em 0;
+}
+
+.ui-custom-datetimepicker-datejs-input input {
+	padding: 0.4em;
+	
+}
+
+.ui-custom-datetimepicker-datejs-input .ui-button {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin-left: -1px;
+	padding: 0;
+	*margin:1px 1px 1px -1px;
+	
+	
 }
